[package]
name = "nostr-nym-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
url = "2.4.1"
nym-sdk = { git = "https://github.com/nymtech/nym" }
nym-bin-common = { git = "https://github.com/nymtech/nym" }
tokio = "1.33.0"
