[package]
name = "nymstr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
url = "2.4.1"
nym-sdk = { git = "https://github.com/nymtech/nym", rev = "6e3bb2ec181fa8bf59548a0cb45ca5f6033f5c3b" }
nym-bin-common = { git = "https://github.com/nymtech/nym", rev = "6e3bb2ec181fa8bf59548a0cb45ca5f6033f5c3b" }
nostr-sdk = "0.24"
tokio = { version = "1.33.0", features = ["full"] }
futures = "0.3.28"
ctrlc = { version = "3.4.1", features = ["termination"] } 